# feedback_cclfd

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_images.sh  docker_push  package.xml  requirements.txt
config/: constraint_ids.yml  constraints.yml  demo_viz.rviz  dictionaries.yml  parameters.yml  robot_main.rviz
config/parsec/: constraints.yml
config/parsec-rl/: constraints.yml  dictionaries.yml  parameters.yml
feedback_classifiers/: CMakeLists.txt  package.xml
feedback_classifiers/config/: fer.json
feedback_classifiers/launch/: classifiers.launch
feedback_classifiers/scripts/: face.py  motion.py  synthesizer.py
feedback_master/: CMakeLists.txt  package.xml
feedback_master/launch/: demo.launch  full.launch  sim.launch
feedback_master/scripts/: teleop.py
feedback_planners/: CMakeLists.txt  package.xml
feedback_planners/scripts/: NLPModule.py  QueryStrategy.py  demonstrator.py  fake_lfd_server.py  nlp_server.py  query_nlp.py  query_strategy.py  request_feedback.py  request_feedback_server.py
feedback_planners/srv/: STT.srv  TTS.srv
feedback_sensors/: CMakeLists.txt  package.xml
feedback_sensors/launch/: sensors.launch
feedback_sensors/scripts/: camera.py  mocap.py
feedback_visualizations/: CMakeLists.txt  Notes.txt  README.md  package.xml  robot_main.rviz
feedback_visualizations/config/: robot_viz.rviz
feedback_visualizations/launch/: demo.launch  rviz_main.launch
feedback_visualizations/scripts/: disp_text.py  joint_test.py  mug_poser.py  mvt_plan_listener.py  path_display.py  rospy_helpers.py  wrist_frame_listener.py
launch/: classifiers.launch  demo_full.launch  demo_logic.launch  demo_main.launch  demo_visuals.launch  full.launch  sensors.launch
msg/: Classification.msg
scripts/: setup.py  teleop.py
src/: data.py  test.py
src/ahri_classifiers/: package.xml
src/ahri_classifiers/launch/: classifiers.launch
src/ahri_classifiers/scripts/: face.py  motion.py  synthesizer.py
src/ahri_master/: CMakeLists.txt  package.xml
src/ahri_master/launch/: ahri_full.launch
src/ahri_planner/: CMakeLists.txt  package.xml
src/ahri_planner/scripts/: demonstrator.py  policy_augmentation.py  query_nlp.py
src/ahri_planners/: CMakeLists.txt  package.xml
src/ahri_planners/scripts/: demonstrator.py  feature_extraction.py  policy_augmentation.py  query_nlp.py
src/ahri_sensors/: CMakeLists.txt  package.xml
src/ahri_sensors/launch/: sensors.launch
src/ahri_sensors/scripts/: camera.py  faceSensor.py  mocap.py  motionSensor.py
src/classifiers/: face.py  motion.py  synthesizer.py
src/parsec/: data.py  parsec_cclfd.py  parsec_node.py  process_user_input.py  rl_maze_sim.py  test.py  tree.py
src/planners/: add_constraint_server.py  constraint_update.py  demonstrator.py  fake_lfd_server.py  nlp_server.py  process_user_input.py  query_nlp.py  query_strategy.py  request_feedback_server.py  tree.py
src/visualizations/: README.md  disp_text.py  joint_test.py  mvt_plan_listener.py  path_display.py  rospy_helpers.py
srv/: Constraint.srv  RequestFeedback.srv  TTS.srv
