<?xml version="1.0"?>
<package format="2">
  <name>feedback_cclfd</name>
  <version>0.1.0</version>
  <description>Feedback based approach to CC-LfD skill repair</description>
  <maintainer email="jack.kawell@colorado.edu">Jack Kawell</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>